--- a/launch/index.html
+++ b/launch/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Coming soon</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-
   
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -89,8 +84,8 @@
 			</div>
 		</div>
 	</header>
-
-	<footer id="fh5co-footer" role="contentinfo">
+        <!-- The footer page -->
+    	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 
 			<div class="row copyright">
