--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			</div>
 		</div>
 	</header>
-
+       <!-- footer start -->
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 
@@ -127,6 +127,7 @@
 
 		</div>
 	</footer>
+        <!-- footer end -->
 	</div>
 
 	<div class="gototop js-top">
