--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 	<script src="js/main.js"></script>
 
 	<script>
+        //get current date
     var d = new Date(new Date().getTime() + 800 * 120 * 120 * 2000);
 
     // default example
