--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Launch &mdash; 100% Fully Responsive HTML5 Template </title>
+	<title>Lach &mdash; 100% Fully Responsive HTML5 Template </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="HTML5 
 " />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="" />
+	<meta name="author" content="Joe" />
 
 
   	<!-- Facebook and Twitter integration -->
@@ -53,7 +53,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 text-center">
-					<div id="fh5co-logo"><a href="index.html">Launch<strong>.</strong></a></div>
+					<div id="fh5co-logo"><a href="index.html">Lach<strong>.</strong></a></div>
 				</div>
 			</div>
 		</div>
@@ -67,7 +67,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>We Are Coming Very Soon!</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+							<h2>Html5 templates Made by <a href="#" target="_blank">Joe</a></h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="row">
 								<h2>Notify me when it's ready</h2>
